2006-10-20  Thomas Moschny  <thomas.moschny@gmx.de>

	* database_check.cc: Add checks for the heights. It is checked
	that every revision has a unique height that is greater than that
	of all it's parents.

2006-10-09  Nathaniel Smith  <njs@pobox.com>

	* automate.cc: Remove spurious #include of rev_height.hh.
	* revision.cc (allrevs_toposorted): Add a comment describing this
	function's purpose.

2006-10-15  Timothy Brownawell  <tbrownaw@gmail.com>

	Propagate the rerwite of 'automate stdio' (in branch
	...automate-stdio-extensions) to mainline. It doesn't actually
	have any extensions anymore, just a rewrite that should make
	the code cleaner.

2006-10-13  Timothy Brownawell  <tbrownaw@gmail.com>

	Revert automate stdio extensions (never were on mainline) so
	that the only change is that automate stdio is implemented
	more cleanly.

2006-10-12  Thomas Keller <me@thomaskeller.biz>

	* automate.cc: replaced std::endl in favour of simple unix
	unix line endings which is useful if these commands are used
	over automate stdio (flushing is expensive...)

2006-10-03  Evan Deaubl  <evan@warpedview.com>

	* monotone.cc, options_list.hh: Added ability to specify
	multiple --message arguments.
	* monotone.texi: Added documentation for multiple --message
	arguments.
	* tests/multiple_message_commit/__driver__.lua, testsuite.lua:
	Added integration test for multiple --message arguments.
	
2006-10-09  Richard Levitte  <richard@levitte.org>

	* po/sv.po: 35 fuzzies cleared,

2006-10-08  Richard Levitte  <richard@levitte.org>

	* debian/control (monotone-doc): Set up build dependencies for the
	tools needed to make the documentation.

2006-10-08  Richard Levitte  <richard@levitte.org>

	* debian/control (monotone-doc): New package that contains all
	the documentation.
	* debian/rules (binary-install/monotone-server): Add special rule
	so the PDF document really gets created.
	* debian/monotone.docs: Move the documentation referenses from
	here ...