@@ -683,3 +683,4 @@ table.insert(tests, "i18n_commit_messages")
 table.insert(tests, "ws_ops_with_wrong_node_type")
 table.insert(tests, "pivot_root_to_new_dir")
 table.insert(tests, "multiple_message_commit")
+table.insert(tests, "db_check_(heights)")
